@@ -7,7 +7,6 @@ import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class MonthLineResponseTest {
@@ -15,7 +14,7 @@ public class MonthLineResponseTest {
     @Test
     @DisplayName("가계부 총내역이 DB에 존재하는 경우 갱신한다")
     void response() {
-        List<BookLineExpense> savedExpense = Arrays.asList(BookLineFixture.createBookLineExpense());
+        List<BookLineExpense> savedExpense = List.of(BookLineFixture.createBookLineExpense());
         List<BookLineExpense> saved = MonthLinesResponse.reflectDB("2023-10-01", savedExpense);
         Assertions.assertThat(saved.get(42)).isEqualTo(savedExpense.get(0));
     }
